<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Arrancar">Jugar</string><string name="Configurar">Configurar</string><string name="Acercade">Acerda de</string><string name="Salir">Salir</string>
    <string name="tituloAplicacion">Asteroides</string><string name="hello_world">Hello world! Asteroides!</string>
    
    
    
    
    <string name="app_name">Asteroides</string>
    <string name="action_settings">Settings</string>

</resources>
