<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".Asteroides" >

    <TextView
        style="@style/TextoAsteroides"
        android:text="@string/tituloAplicacion" />

    <Button android:id="@+id/button1"
        style="@style/TextoAsteroides.Botones"
        android:text="@string/Arrancar" />

    <Button android:id="@+id/button2"
        style="@style/TextoAsteroides.Botones"
        android:text="@string/Configurar" />

    <Button android:id="@+id/button3"
        style="@style/TextoAsteroides.Botones"
        android:text="@string/Acercade" />

    <Button android:id="@+id/button4"
        style="@style/TextoAsteroides.Botones"
        android:text="@string/Salir" />

</LinearLayout>